projetGL/src/test/deca/extension/context/valid/test_tab_entier_acces.deca
{
    int a;
    int[]tab_entier=[10,5];
    print(tab_entier[0]," ",tab_entier[1]);
}
