projetGL/src/test/deca/extension/context/invalid/invalid_05.deca
{
    int[] x=[1,2];
    boolean [] bool;
    bool =x;
}